--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,54 @@
-s
+main{
+  background-color: rgba(0,0,0,0.1);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#img-div{
+  background-color: white;
+  box-shadow: 10px 0px 20px 1px gray;
+  border-radius: 1%;
+  width: 90%;
+  height: auto;
+}
+
+
+#img-caption{
+  font-size: 1.5em;
+  margin: 10px 10px 20px 20px;
+}
+
+
+#title{
+  font-family: 'Dawning of a New Day',monospace;
+  font-size: 100px;
+  padding: 0.5em;
+
+}
+#tribute-info{
+  background-color: white;
+  border-style: none;
+  box-shadow: 10px 10px 20px 1px gray;
+  border-radius: 1%;
+  margin: 1em;
+  font-size:2em;
+
+  width: 90%;
+  height: auto;
+
+}
+
+
+#image{
+  width: 100%;
+  border-style: solid;
+  border-color: transparent;
+  max-width: 100%;
+  border-radius: 1%;
+  display: block;
+  position: relative;
+  top:-10px;
+  height: auto;
+}
